[package]
name = "dranik"
description = "Dranik Robot"
repository.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "dranik"
path = "lib.rs"

[[bin]]
name = "dranik"
path = "../dranik.rs"

[dependencies]
# Core of the robot (hardware abstraction layer)
dranik-core = { path = "./core", features = ["reveal_modules"] }
# Async runtime
# tokio = { version = "1.35", features = ["full"] }
