[package]
name = "dranik"
description = "Dranik Robot"
repository.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "dranik"
path = "lib.rs"

[[bin]]
name = "dranik"
path = "../dranik.rs"

[dependencies.dranik-api]
features = ["bin"]
path = "./api"
