[package]
name = "dranik-core"
description = "Dranik Robot Core"
repository.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "dranikcore"
path = "lib.rs"

[dependencies.l2math]
git = "https://github.com/DranikiRobotics/librobomath"
package = "l2math"

[dependencies.libtrig]
git = "https://github.com/DranikiRobotics/librobomath"
package = "libtrig"

[dependencies.pyo3]
version = "0.20.0"

[[test]]
name = "rust_only_robot"
path = "tests/rust_only_robot.rs"

[features]
unstable = ["l2math/unstable", "libtrig/unstable"]

reveal_modules = []

[package.metadata.docs.rs]
all-features = true
